[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ionlab"
version = "0.1.11"
authors = ["Nguyễn Minh Trí <kamitri.tnyn@gmail.com>"]
description = "Determine the composition of ionic equilibrium in solutions, in an ideal environment."
readme = "README.md"
requires-python = "==3.11"
license = "LGPL-3.0-or-later"
keywords = ["chemistry", "ion", "equilibrium", "ionic", "solution", "analytical chemistry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "==3.11"
numpy = "==1.24.2"
sympy ="==1.11.1"
gekko = "==1.0.6"
pandas = "==1.5.3"
matplotlib = "==3.6.3"
wolframclient = "==1.1.7"
openpyxl = "==3.1.0"

[tool.poetry.urls]
"Homepage" = "https://github.com/Kamitri/ionlab"
"Bug Tracker" = "https://github.com/Kamitri/ionlab/issues"